Thu May 19 06:36:11 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/net/imap.rb:  Fix indentation of EOF for heredoc.
	* lib/debug.rb (Commands):  Fix indentation of EOHELP for heredoc.

Thu May 19 06:30:38 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/mkmf.rb:  Fix indentation of EOM for heredoc.

Thu May 19 06:16:41 2011  Eric Hodel  <drbrain@segment7.net>

	* lib:  Convert tabs to spaces for ruby files per
	  http://redmine.ruby-lang.org/projects/ruby/wiki/DeveloperHowto#coding-style
	  Patch by Steve Klabnik [Ruby 1.9 - Bug #4730]
	  Patch by Jason Dew [Ruby 1.9 - Feature #4718]

Thu May 19 06:06:07 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/cgi/util.rb:  Improve documentation.  Patch by Clinton Nixon.
	  [Ruby 1.9 - Bug #4733]
	* lib/cgi/core.rb:  ditto
	* lib/cgi/cookie.rb:  ditto

Thu May 19 06:02:21 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/tempfile.rb:  Document Dir.mkdir and Dir.rmdir.  Patch by Clinton
	  Nixon.  [Ruby 1.9 - Bug #4728]

Thu May 19 05:57:52 2011  Eric Hodel  <drbrain@segment7.net>

	* encoding.c:  Improve documentation for Encoding#default_external and
	  Encoding#default_internal.

Wed May 18 22:45:26 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/lib/console/size.rb (IO#console_size): new
	  method.  (EXPERIMENTAL)

Wed May 18 22:41:51 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h: add for internal use only.

Wed May 18 22:36:43 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (setup_exception): internal exception should be hidden

Wed May 18 20:25:04 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/timeout.rb (Timeout#timeout): don't leak "execution expired"
	  exception. [Bug #4283] [ruby-core:34534].

Wed May 18 06:09:24 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/cmath.rb:  Add some examples and improve documentation.  Patch by
	  Sandor Szucs.  [Ruby 1.9 - Bug #4727]

Wed May 18 05:40:31 2011  Eric Hodel  <drbrain@segment7.net>
